@@ -1,7 +1,7 @@
-# $NetBSD: gcc3.mk,v 1.2 2003/07/08 15:04:57 drochner Exp $
+# $NetBSD: gcc3.mk,v 1.3 2003/07/17 09:07:56 abs Exp $
 #
 # make configuration file for @PKGNAME@
 
 USE_GCC3=	# defined
 CC=		@GCC_PREFIX@/bin/cc
-CPP=		@GCC_PREFIX@/bin/cpp
+CPP=		@GCC_PREFIX@/bin/cpp -gcc
