@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.2809 2003/07/17 09:02:31 adam Exp $
+$NetBSD: CHANGES,v 1.2810 2003/07/17 09:08:49 abs Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -2840,3 +2840,6 @@ Changes to the packages collection and infrastructure in 2003:
 	Added avr-gdb-5.2.1 [wennmach 2003-07-16]
 	Updated nsd to 1.2.1 [itojun 2003-07-17]
 	Updated xpaint to 2.7.0 [adam 2003-07-17]
+	Updated gcc3 to 3.3nb5 [abs 2003-07-17]
+	Updated gcc3-c to 3.3nb1 [abs 2003-07-17]
+	Updated gcc3-c++ to 3.3nb1 [abs 2003-07-17]
